# fantastic-octo-meme

./: .gitignore  .regulation_monitor_state.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PLAN.md  PRD.md  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  koai-verify.yml  regulation_monitor.yml  release.yml
benchmarks/: matrix.py  protocol_v1.md  transform_spec.py
benchmarks/results/: adoption_snapshot_latest.json  survival_matrix_v1.json  survival_summary_v1.md
docs/: AI컴플라이언스_1년차_기술선점_검증우선.md  architecture.md  badge_sharing.md  faq.md  format_landscape.md  gap_report_draft.md  gap_report_v1.md  pricing_hypothesis.md  quickstart.md  regulation_monitoring.md  retrospective_q2.md  tta_gap_analysis.md  tta_submission_draft.md  w16_blocked.md
docs/blog/: community_post_draft.md  tistory_w16_draft.md
docs/examples/: curl_example.sh  fastapi_example.py  nextjs_example.ts  node_example.ts  python_example.py
docs/references/: AI_투명성_확보_가이드라인_원문요약.md
docs/rules/: rule_engine_spec_v0.md
koai_verify/: __init__.py  api.py  cli.py  pipeline.py
koai_verify/analysis/: adoption_metrics.py  batch_runner.py  tool_fingerprint.py  transform_survivability.py
koai_verify/detectors/: __init__.py  base.py  c2pa_detector.py  exif_detector.py  ocr_detector.py  result.py  watermark_detector.py
koai_verify/report/: __init__.py  badge.py  formatter.py
koai_verify/robustness/: __init__.py  harness.py
koai_verify/rules/: __init__.py  engine.py  models.py
koai_verify/server/: __init__.py  app.py  auth.py  pricing.py  report_store.py  usage.py
koai_verify/standards/: __init__.py  regulation_monitor.py  tta_contact.py
playground/: app.py
scripts/: check_regulation_updates.py  collect_adoption_metrics.py  run_benchmark.py
sdk/: jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts  types.ts  verify.ts
sdk/src/__tests__/: index.test.ts
tests/: conftest.py
tests/fixtures/: make_synthetic_samples.py
tests/fixtures/samples/: README.md
tests/unit/: test_batch_runner.py  test_c2pa_detector.py  test_c2pa_evaluation.py  test_ci_config.py  test_cli.py  test_detector_base.py  test_docs_w15.py  test_exif_detector.py  test_exif_fields.py  test_measurement_matrix.py  test_ocr_detector.py  test_open_source_docs.py  test_pipeline.py  test_playground.py  test_report_formatter.py  test_robustness_harness.py  test_rule_engine.py  test_rule_engine_w8.py  test_sample_fixtures.py  test_sdk_api.py  test_synthid_investigation.py  test_tool_fingerprint.py  test_transform_spec.py  test_transform_survivability.py  test_w16_release.py  test_w17_faq_docs.py  test_w17_sdk_errors.py  test_w18_examples.py  test_w19_tta_standards.py  test_w20_server.py  test_w21_pricing.py  test_w22_badge_sharing.py  test_w24_regulation_monitor.py  test_w25_adoption_metrics.py  test_watermark_and_label_patterns.py  test_watermark_detector.py
